# embedding-size-spam-classification

./: .gitignore  DATA.md  LICENSE  README.md  pyproject.toml  requirements-ml.txt  requirements.txt
mails/: file_mappings.json  ham_mail_test.txt  ham_mail_train.txt  spam_test.txt  spam_train.txt
output/cluster/: kmeans_res.csv
output/embeddings/: distances_lml12_cosine_spam.json  distances_lml12_euclidean_spam.json  distances_lml6_cosine_spam.json  distances_lml6_euclidean_spam.json  distances_nomic128_cosine_spam.json  distances_nomic128_euclidean_spam.json  distances_nomic512_cosine_spam.json  distances_nomic512_euclidean_spam.json  distances_nomic64_cosine_spam.json  distances_nomic64_euclidean_spam.json  distances_nomic768_cosine_spam.json  distances_nomic768_euclidean_spam.json
output/mail_length/: ham_test.json  ham_train.json  spam_test.json  spam_train.json
output/ml_classification/: results.csv  summary.csv
output/results/: lml12_test_summary.json  lml6_test_summary.json  mpnet_test_summary.json  mxbai_test_summary.json  nomic128_test_summary.json  nomic256_test_summary.json  nomic512_test_summary.json  nomic64_test_summary.json  nomic768_test_summary.json  para_test_summary.json
scripts/: build_release.sh  build_sanity_check_dbs.sh  classify.sh  classify_ml.sh  embedding_distances.sh  embeddings.sh  embeddings_to_bin.sh  kmeans_classify.sh  kmeans_create.sh  knn.sh  plot_all_mail_lengths.sh  plot_embedding_histograms.sh  plot_knn.sh  plot_ml.sh  plot_thresholds.sh  retrieve_and_plot_thresholds.sh  retrieve_best_thresholds.sh  retrieve_threshold_perf.sh  sanitycheck.sh
src/classification/: classify.py  classify_kmeans.py  classify_ml.py  cluster_kmeans.py  knn.py  ml_classifiers.py  my_classifiers.py
src/embeds/: create_embeddings.py  embeddings_to_bin.py  my_sentence_transformers.py  normalize_embeddings.py
src/eval/: build_sanity_check_db.py  plot_classification_results.py  plot_kmeans.py  plot_knn.py  plot_ml_bars.py  plot_ml_candles.py  plot_ml_scatter.py  plot_threshold.py  plot_threshold_results.py  sanity_check.py
src/pre_processing/: pick_ham_mails.py  pick_spam_train.py  pre_process_spam.py  remove_duplicates.py
src/statistics/: embedding_distances.py  get_best_kmeans.py  get_best_threshold.py  get_biggest_kmean_diff.py  get_biggest_knn_diff.py  get_kmeans_performance.py  get_knn_performance.py  kmean_res_to_csv.py  mail_lengths.py  ml_summary_to_latex.py  plot_embedding_histograms.py  plot_mail_lengths.py  plot_mails.py  plot_summary.py  retrieve_threshold_performance.py
src/tests/: test_for_distinct_spam_sets.py  test_for_empty_embeddings.py  test_for_normalized_embeddings.py
src/util/: count_files.py  formatting.py  progress_bar.py  seeds.py
(+29808 files in other folders)
